// AbilityInventory.h
#ifndef ABILITYINVENTORY_H
#define ABILITYINVENTORY_H

#include <vector>
#include <string>
#include "Ability.h"

class AbilityInventory {
public:
    void addAbility(const Ability& ability);
    void removeAbility(const Ability& ability);
    bool hasAbility(const std::string& abilityId) const;
    void clearAbilities() { //초기화 시키기
    abilities.clear();}
private:
    std::vector<Ability> abilities;
};

#endif // ABILITYINVENTORY_H


